Fix bug where some elements covered AlertPopup

--- a/client/src/components/alertpopup/AlertPopup.scss
+++ b/client/src/components/alertpopup/AlertPopup.scss
@@ -4,4 +4,5 @@
   bottom: 10px;
   max-width: 700px;
   width: 100%;
+  z-index: 999;
 }
